--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width= , initial-scale=1.0" />
-    <link rel="stylesheet " type="text/Css" href="style.css" />
+    <link rel="stylesheet " type="text/Css" href="stlyle.css" />
     <title>My Portfolio</title>
   </head>
   <body>
