added portfolio content ,while adjusting CSS

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width= , initial-scale=1.0" />
+    <meta name="description" content="Front-end developer portfolio" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Madimi+One&display=swap"
+      rel="stylesheet"
     />
     <link rel="stylesheet " type="text/Css" href="stlyle.css" />
     <script
@@ -24,12 +30,29 @@
   </head>
   <body>
     <header class="header">
-      <a href="#home" class="my logo">My <span>Portfolio</span></a>
-      <nav class="navbar">
-        <a href="#home">HOME</a>
-        <a href="#about-me">ABOUT ME</a>
-        <a href="#services">SERVICES</a>
-        <a href="#contact">CONTACT</a>
+      <a href="" class="my logo">My <span> Portfolio</span></a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">JAMEELAH</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">contact</a>
+          </div>
+        </div>
       </nav>
       ,
     </header>
@@ -39,11 +62,57 @@
         <h1>I'm <span>Jamilah Nabasirye</span></h1>
         <h3>Frontend Developer</h3>
         <br />
-        <p>Practicing to create awebsite and improve my frontend skills.</p>
+        <a href="" class="socials">Contact me</a>
       </div>
       <div class="image-container">
         <img src="profile.png" alt="jyamee" />
       </div>
     </section>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2 class="m-5 mb-3">Fitness app</h2>
+          <p>
+            Having a high level of overall fitness is linked with a lower risk
+            of chronic disease, as well as a better ability to manage health
+            issues that do come up. Better fitness also promotes more
+            functionality and mobility throughout one’s life span.
+          </p>
+          <a href="" class="fitness">Launch Fitness App</a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h2 class="mb-3">Weather app</h2>
+          <p>
+            Temperatures will be mild with highs in the mid 60s. Enjoy today! We
+            are about to enter a very unsettled stretch of weather.
+          </p>
+          <a href="" class="forecast">Launch forecast App</a>
+        </div>
+        <div class="col-6"></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2 class="mb-3">Manifesting</h2>
+          <p>
+            Be Clear About What You Want It’s important that you’re clear about
+            what your goals are in order to manifest them. Articulating them
+            clearly can help crystallize them. Make positive statements while
+            you’re manifesting what you want. These are some examples of what
+            you could say: I am capable of this job and deserving of this
+            promotion. I trust that the universe is bringing a worthy partner
+            into my life.
+          </p>
+          <a href="" class="manifest">Launch Manifest App</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
