added images  of my projects

--- a/index.html
+++ b/index.html
@@ -54,23 +54,31 @@
           </div>
         </div>
       </nav>
-      ,
     </header>
     <section id="home" class="home">
-      <div class="content">
-        <h3>Hi, Everyone!</h3>
-        <h1>I'm <span>Jamilah Nabasirye</span></h1>
-        <h3>Frontend Developer</h3>
-        <br />
-        <a href="" class="socials">Contact me</a>
-      </div>
-      <div class="image-container">
-        <img src="profile.png" alt="jyamee" />
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <div class="image-container">
+                <img src="profile.png" class="img-fluid m-5" alt="" />
+              </div>
+            </div>
+            <div class="col-6">
+              <h3>Hi, Everyone!</h3>
+              <h1>I'm <span>Jamilah Nabasirye</span></h1>
+              <h3>Frontend Developer</h3>
+              <br />
+              <a href="" class="socials">Contact me</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <div class="container">
       <div class="row">
-        <div class="col-6"></div>
+        <div class="col-6">
+          <img src="fitness-app.jpg" class="img-fluid" alt="">
+        </div>
         <div class="col-6">
           <h2 class="m-5 mb-3">Fitness app</h2>
           <p>
@@ -86,21 +94,25 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
+          <h2 class="m-5 mb-2">Weather app</h2>
           <p>
             Temperatures will be mild with highs in the mid 60s. Enjoy today! We
             are about to enter a very unsettled stretch of weather.
           </p>
           <a href="" class="forecast">Launch forecast App</a>
         </div>
-        <div class="col-6"></div>
+        <div class="col-6">
+          <img src="forecast.jpg" class="img-fluid" alt="">
+        </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6"></div>
         <div class="col-6">
-          <h2 class="mb-3">Manifesting</h2>
+          <img src="manifest.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-6">
+          <h2 class=" m-5 mb-3">Manifesting</h2>
           <p>
             Be Clear About What You Want It’s important that you’re clear about
             what your goals are in order to manifest them. Articulating them
