--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="header">
       <a href="" class="my logo">My <span> Portfolio</span></a>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">JAMEELAH</a>
+        <a class="navbar-brand" href="#">Jameelah</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -55,18 +55,19 @@
         </div>
       </nav>
     </header>
+    <div class="project">
     <section id="home" class="home">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col d-none d-lg-block">
               <div class="image-container">
                 <img src="profile.png" class="img-fluid m-5" alt="" />
               </div>
             </div>
-            <div class="col-6">
+            <div class="col">
               <h3>Hi, Everyone!</h3>
               <h1>I'm <span>Jamilah Nabasirye</span></h1>
-              <h3>Frontend Developer</h3>
+              <h3>Front-end Developer</h3>
               <br />
               <a href="" class="socials">Contact me</a>
             </div>
@@ -76,7 +77,7 @@
     </section>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 d-none d-lg-block">
           <img src="fitness-app.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-6">
@@ -87,7 +88,7 @@
             issues that do come up. Better fitness also promotes more
             functionality and mobility throughout one’s life span.
           </p>
-          <a href="" class="fitness">Launch Fitness App</a>
+          <a href="" class="fitness">FitnessApp</a>
         </div>
       </div>
     </div>
@@ -99,18 +100,18 @@
             Temperatures will be mild with highs in the mid 60s. Enjoy today! We
             are about to enter a very unsettled stretch of weather.
           </p>
-          <a href="" class="forecast">Launch forecast App</a>
+          <a href="" class="forecast">forecastApp</a>
         </div>
-        <div class="col-6">
-          <img src="forecast.jpg" class="img-fluid" alt="">
+        <div class="col-6 d-none d-lg-block">
+          <img src="forecast.jpg" class="img-fluid w-50" alt="Responsive image">
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="manifest.jpg" class="img-fluid" alt="">
-        </div>
+        <div class="col-6 d-none d-md-block">
+          <img src="manifest.jpg" class="img-fluid w-50" alt="Responsive image">
+        </div> 
         <div class="col-6">
           <h2 class=" m-5 mb-3">Manifesting</h2>
           <p>
@@ -122,9 +123,10 @@
             promotion. I trust that the universe is bringing a worthy partner
             into my life.
           </p>
-          <a href="" class="manifest">Launch Manifest App</a>
+          <a href="" class="manifest">ManifestApp</a>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
