--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </div>
             </div>
             <div class="col">
-              <h3>Hi, Everyone!</h3>
+              <h3> Hi, Everyone!</h3>
               <h1>I'm <span>Jamilah Nabasirye</span></h1>
               <h3>Front-end Developer</h3>
               <br />
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6 d-none d-lg-block">
-          <img src="fitness-app.jpg" class="img-fluid" alt="">
+          <img src="fitness-app.jpg" class="img-fluid mb-4" alt="Responsive image">
         </div>
         <div class="col-6">
           <h2 class="m-5 mb-3">Fitness app</h2>
