--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Front-end developer portfolio" />
+    <meta name="description" content="web development content" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anta&family=Madimi+One&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet " type="text/Css" href="stlyle.css" />
+    <link rel="stylesheet" href="stlyle.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -26,21 +22,22 @@
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
-    <title>My Portfolio</title>
+    <title>Front-end Developer-Jameelah</title>
   </head>
   <body>
+
     <header class="header">
       <a href="" class="my logo"><span> Portfolio </span></a>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Jyamee</a>
+  <a class="navbar-brand" href="about-me.html">Projects</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-link" href="#">About</a>
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="about-me.html">About</a>
+      <a class="nav-link" href="about-me.html">Contact</a>
     </div>
   </div>
 </nav>
@@ -48,78 +45,103 @@
         </div>
       </nav>
     </header>
-    <div class="project">
-    <section id="home" class="home">
-        <div class="container">
-          <div class="row">
-            <div class="col d-none d-lg-block">
-              <div class="image-container">
-                <img src="profile.png" class="img-fluid m-5" alt="" />
-              </div>
-            </div>
-            <div class="col">
-              <h3> Hi, Everyone!</h3>
-              <h1>I'm <span>Jamilah Nabasirye</span></h1>
-              <h3>Front-end Developer</h3>
-              <br />
-              <a href="" class="socials">Contact me</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h1>
+      👩‍💻<br />
+      Jameelah's coding projects
+    </h1>
+    <br />
     <div class="container">
       <div class="row">
-        <div class="col-6 d-none d-lg-block">
-          <img src="fitness-app.jpg" class="img-fluid mb-4" alt="Responsive image">
+        <div class="col-sm-4">
+          <img
+            src="fitness-app.jpg"
+            class="img-fluid p-1 shadow rounded d-none d-sm-block"
+            width="100%"
+          />
         </div>
-        <div class="col-6">
-          <h2 class="m-5 mb-3">Fitness app</h2>
-          <p>
-            Having a high level of overall fitness is linked with a lower risk
-            of chronic disease, as well as a better ability to manage health
-            issues that do come up. Better fitness also promotes more
-            functionality and mobility throughout one’s life span.
-          </p>
-          <a href="" class="fitness">FitnessApp</a>
+        <div class="col-sm-4">
+          <img
+            src="forecast.jpg"
+            class="img-fluid p-1 shadow rounded d-none d-sm-block"
+            width="60%"
+          />
+        </div>
+        <div class="col-sm-4">
+          <img
+            src="manifest.jpg"
+            class="img-fluid p-1 shadow rounded d-none d-sm-block"
+            width="80% "
+          />
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <h2 class="m-5 mb-2">Weather app</h2>
-          <p>
-            Temperatures will be mild with highs in the mid 60s. Enjoy today! We
-            are about to enter a very unsettled stretch of weather.
-          </p>
-          <a href="" class="forecast">forecastApp</a>
+    <h3 class="h3">Jameelah's Story Instant Feedback:</h3>
+    <p>
+      One of the rewarding aspects of coding is the immediate feedback. Coders
+      can run their code and see the results, allowing for quick iterations and
+      improvements. Remote Work Opportunities: Coding is a field that often
+      allows for remote work, providing flexibility in terms of location and
+      work hours. Job Demand and Security: The demand for skilled coders is
+      consistently high, offering job security and the potential for lucrative
+      career opportunities. Creativity in Design: Writing code is not just about
+      following rules; it's also a creative process. Developers design user
+      interfaces, build interactive experiences, and create visually appealing
+      applications.
+    </p>
+    <h3 class="h3">🙋‍♀️ Jameelah's Motivation</h3>
+    <p>
+      Structured Learning Path: Coding programs often provide a structured
+      curriculum, guiding learners through a logical progression of concepts and
+      skills. Hands-on Projects: Many coding programs include hands-on projects
+      that allow learners to apply their knowledge in real-world scenarios. This
+      practical experience can enhance understanding and retention. Mentorship
+      and Support: Some coding programs offer mentorship and support from
+      experienced instructors, providing valuable guidance and assistance
+      throughout the learning journey.
+    </p>
+
+    <div id="details">
+      <a href="about-me.html">Home-page</a>
+      <div class="social-links">
+        <div id="twitter" class="social-btn flex-center">
+          <svg
+            viewBox="0 0 24 24"
+            height="24"
+            width="24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+            ></path></svg
+          ><span>@jymie</span>
         </div>
-        <div class="col-6 d-none d-lg-block">
-          <img src="forecast.jpg" class="img-fluid w-50" alt="Responsive image">
+
+        <div id="linkedin" class="social-btn flex-center">
+          <svg
+            viewBox="0 0 24 24"
+            height="24"
+            width="24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"
+            ></path></svg
+          ><span>in/jameelah Nabasirye</span>
+        </div>
+
+        <div id="github" class="social-btn flex-center">
+          <svg
+            viewBox="0 0 24 24"
+            height="24"
+            width="24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+            ></path></svg
+          ><span>jyamee</span>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6 d-none d-md-block">
-          <img src="manifest.jpg" class="img-fluid w-50" alt="Responsive image">
-        </div> 
-        <div class="col-6">
-          <h2 class=" m-5 mb-3">Manifesting</h2>
-          <p>
-            Be Clear About What You Want It’s important that you’re clear about
-            what your goals are in order to manifest them. Articulating them
-            clearly can help crystallize them. Make positive statements while
-            you’re manifesting what you want. These are some examples of what
-            you could say: I am capable of this job and deserving of this
-            promotion. I trust that the universe is bringing a worthy partner
-            into my life.
-          </p>
-          <a href="" class="manifest">ManifestApp</a>
-        </div>
-      </div>
-    </div>
     </div>
   </body>
 </html>
