added CSS content

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </header>
     <h1>
       👩‍💻<br />
+      <strong>Take a look at what i have been working on</strong>
       Jameelah's coding projects
     </h1>
     <br />
@@ -76,7 +77,7 @@
       </div>
     </div>
     <h3 class="h3">Jameelah's Story Instant Feedback:</h3>
-    <p>
+    <p>  
       One of the rewarding aspects of coding is the immediate feedback. Coders
       can run their code and see the results, allowing for quick iterations and
       improvements. Remote Work Opportunities: Coding is a field that often
@@ -101,7 +102,7 @@
     </p>
 
     <div id="details">
-      <a href="about-me.html">Home-page</a>
+      <a href="about-me.html">projects-page</a>
       <div class="social-links">
         <div id="twitter" class="social-btn flex-center">
           <svg
