--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="navbar-nav">
       <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
       <a class="nav-link" href="about-me.html">About</a>
-      <a class="nav-link" href="about-me.html">Contact</a>
+      <a class="nav-link" href="contact.html">Contact</a>
     </div>
   </div>
 </nav>
