updating the index.html file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         </div>
       </div>
     </div>
-    <h3 class="h3">Jameelah's Story Instant Feedback:</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+    <h3 class="h3"> 👩‍💻Jameelah's Story Instant Feedback:</h3>
     <p>  
       One of the rewarding aspects of coding is the immediate feedback. Coders
       can run their code and see the results, allowing for quick iterations and
@@ -89,7 +92,10 @@
       interfaces, build interactive experiences, and create visually appealing
       applications.
     </p>
+        </div>
+      <div class="col-6">
     <h3 class="h3">🙋‍♀️ Jameelah's Motivation</h3>
+    
     <p>
       Structured Learning Path: Coding programs often provide a structured
       curriculum, guiding learners through a logical progression of concepts and
@@ -100,7 +106,9 @@
       experienced instructors, providing valuable guidance and assistance
       throughout the learning journey.
     </p>
-
+     </div>
+    </div>
+  </div>
     <div id="details">
       <a href="about-me.html">projects-page</a>
       <div class="social-links">
